--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div>
     <img id="bgimg" src="gifs\fashionBattlePlayable_base1_Moment.jpg" alt="">
-    <video autoplay muted loop preload="auto" id="base_vid_1">
+    <video autoplay muted loop playsinline preload="auto" id="base_vid_1">
      <source id="vid1_src" src="gifs\fashionBattlePlayable_base1.mp4" type="video/mp4">
     </video>
   </div>
